[package]
description = "Client for the Linux Direct Rendering Manager and Kernel Modesetting APIs."
edition = "2021"
name = "linux-drm"
version = "0.3.0"

license = "MIT"
repository = "https://github.com/apparentlymart/rust-linux-drm"

[dependencies]
linux-io = "0.11.0"
linux-unsafe = "0.11.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
