[package]
description = "Client for the Linux Direct Rendering Manager and Kernel Modesetting APIs."
edition = "2021"
name = "linux-drm"
version = "0.5.0"

license = "MIT"
repository = "https://github.com/apparentlymart/rust-linux-drm"

[dependencies]
ascii = {version = "1.1", optional = true}
linux-io = "0.12.0"
linux-unsafe = "0.12.0"
ptr_meta = {version = "0.3", optional = true}

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
stable_polyfill = ["dep:ptr_meta", "dep:ascii"]
